#Issue-61 Fix podcast RSS title

--- a/templates/feed.rss.twig
+++ b/templates/feed.rss.twig
@@ -8,7 +8,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <rss version="2.0" xmlns:itunes="http://www.itunes.com/dtds/podcast-1.0.dtd">
 <channel>
-<title>{{ channel.title }}</title>
+<title>{{ channel.header.podcast.title }}</title>
 <link>{{ header.podcast.link }}</link>
 <language>{{ channel.header.podcast.channelLanguage }}</language>
 <copyright>{{ channel.header.podcast.copyright }}</copyright>
